2001-10-22  Adam Spiers  <adam@spiers.net>

	* 16092: Completion/Unix/Command/_mysql_utils: don't override
	settings in ~/.my.cnf

2001-10-20  Bart Schaefer  <schaefer@zsh.org>

	* Adapted from Stefan Dalibor, 16043: Src/utils.c: checkrmall()
	must not print to shout when shout's not valid.

2001-10-19  Sven Wischnowsky  <wischnow@zsh.org>

	* 16085: Completion/Base/Utility/_describe,
	Completion/Zsh/Context/_condition,
	Completion/Zsh/Type/_file_descriptors: fix: make _describe
	handle (...) arguments correctly; use _file_descriptors after
	-t in conditions; don't display empty descriptions in
	_file_descriptors

2001-10-18  Oliver Kiddle  <opk@zsh.org>

	* 16080: Src/builtin.c, Doc/Zsh/builtins.yo, Test/B03print.ztst:
	allow arguments to be specified in printf format specifications

2001-10-17  Clint Adams  <clint@zsh.org>

	* 16078: Completion/Unix/Command/_zip:
	add -r, change description for -R.

2001-10-17  Sven Wischnowsky  <wischnow@zsh.org>

	* 16076: Completion/Unix/Type/_path_files: don't use
	_comp_ignore while building paths, only at end

2001-10-16  Peter Stephenson  <pws@csr.com>

	* 16065: Doc/Zsh/metafaq.yo: sourceforge.

2001-10-16  Oliver Kiddle  <opk@zsh.org>

	* 16064: Src/builtin.c, Src/utils.c, Test/B03print.ztst:
	fix return code of printf after math errors, incomplete comment
	in utils.c and tests of printf now that math evaluation is used

2001-10-16  Clint Adams  <clint@zsh.org>

	* 16062: Src/Modules/zftp.c: use O_EXCL
	when opening a temporary file.

2001-10-15  Wayne Davison  <wayned@users.sourceforge.net>

	* 16059: Src/hist.c: Fix HIST_NO_SPACE when
	INTERACTIVE_COMMENTS is set and we get a comment.

2001-10-15  Oliver Kiddle  <opk@zsh.org>

	* 16042: Src/builtin.c, Doc/Zsh/builtins.yo: use arithmetic
	evaluation for numeric arguments to printf

2001-10-15  Sven Wischnowsky  <wischnow@zsh.org>

	* Bart: 16038 and 16041: Src/cond.c, Src/loop.c: for caching of
	compiled patterns: remember that singsub() might modify the string