@@ -1,3 +1,8 @@
+2001-10-22  Bart Schaefer  <schaefer@zsh.org>
+
+	* 16111: Src/Builtins/rlimits.c: Report error on attempt to set
+	limit to a string that is not a decimal number.
+
 2001-10-22  Adam Spiers  <adam@spiers.net>
 
 	* 16092: Completion/Unix/Command/_mysql_utils: don't override
